--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,10 +1,10 @@
 version: "3.7"
 services:
   # redis 설정
-  # redis:
-  #   image: "redis:alpine"
-  #   ports:
-  #     - "6379:6379"
+  redis:
+    image: "redis:alpine"
+    ports:
+      - "6379:6379"
 
   # 서버 설정
   backend:
@@ -20,7 +20,7 @@ services:
   nginx:
     depends_on:
       - backend
-      # - redis
+      - redis
     restart: always
     build:
       dockerfile: Dockerfile
