:rocket: feat(Deploy): 프론트 배포 테스트

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -5,7 +5,7 @@ on:
     branches:
       - main
   repository_dispatch:
-    types: [ backend_event ]
+    types: [backend_event, frontend_event]
 
 jobs:
   build:
