--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -5,7 +5,7 @@ on:
     branches:
       - main
   repository_dispatch:
-    types: [backend_event, frontend_event]
+    types: [backend_event, front_event]
 
 jobs:
   build:
@@ -16,11 +16,11 @@ jobs:
       - name: checkout
         uses: actions/checkout@master
 
-      - name: create env file
-        run: |
-          touch .env
-          echo "${{ secrets.ENV_VARS }}" >> .env
-          cat .env
+      # - name: create env file
+      #   run: |
+      #     touch .env
+      #     echo "${{ secrets.ENV_VARS }}" >> .env
+      #     cat .env
       - name: create remote directory
         uses: appleboy/ssh-action@master
         with:
