:rocket: feat(Deploy): 프론트 배포 테스트

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -12,7 +12,7 @@ services:
     container_name: backend
     hostname: backend
     env_file:
-      - ./.env
+      - .env
     expose:
       - "8080"
 
