--- a/nginx/default.conf
+++ b/nginx/default.conf
@@ -8,7 +8,7 @@
     #       }
 
     location /api {
-      proxy_pass http://backend:8080;
+      proxy_pass http://backend:8080/api;
       proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
       proxy_set_header Host $host;
       proxy_set_header X-Real_IP $remote_addr;
