--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -17,7 +17,7 @@ services:
       - "8080"
 
   client:
-    image: squirmm/campper-client:main
+    image: squirmm/campper-client:dev
     container_name: client
     hostname: client
     env_file:
