--- a/nginx/default.conf
+++ b/nginx/default.conf
@@ -15,11 +15,11 @@
       proxy_redirect off;
    }
 
-    location / {
-      proxy_pass http://client:3000;
-      proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
-      proxy_set_header Host $host;
-      proxy_set_header X-Real_IP $remote_addr;
-      proxy_redirect off;
-   }
+  #   location / {
+  #     proxy_pass http://client:3000;
+  #     proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+  #     proxy_set_header Host $host;
+  #     proxy_set_header X-Real_IP $remote_addr;
+  #     proxy_redirect off;
+  #  }
  }
