:rocket: feat(Deploy): 프론트 배포 테스트 도커파일 수정중

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -16,20 +16,20 @@ services:
     expose:
       - "8080"
 
-  # client:
-  #   image: squirmm/campper-client:dev
-  #   container_name: client
-  #   hostname: client
-  #   env_file:
-  #     - .env.local
-  #   ports:
-  #     - "3000"
+  client:
+    image: squirmm/campper-client:dev
+    container_name: client
+    hostname: client
+    env_file:
+      - .env.local
+    ports:
+      - "3000"
 
   # nginx 설정
   nginx:
     depends_on:
       - backend
-      # - client
+      - client
       - redis
     restart: always
     build:
