--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -13,6 +13,7 @@ services:
     hostname: backend
     env_file:
       - .env
+      - .env.local
     expose:
       - "8080"
 
@@ -21,6 +22,7 @@ services:
     container_name: client
     hostname: client
     env_file:
+      - .env.local
       - .env.local
     ports:
       - "3000:3000"
