:rocket: feat(Deploy): 프론트 배포 테스트 도커파일 수정중

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -22,7 +22,7 @@ services:
     container_name: client
     hostname: client
     env_file:
-      - .env.local
+      - .env
       - .env.local
     ports:
       - "3000:3000"
