:rocket: feat(Deploy): 프론트 배포 테스트 nginx 에러로그 추가

--- a/nginx/default.conf
+++ b/nginx/default.conf
@@ -1,6 +1,9 @@
+http{ 
   server {
     listen 80;
     server_name campper.site;
+
+    error_log /var/log/nginx/default/error.log;
 
 # https 설정 시 사용
     # if ($http_x_forwarded_proto != 'https') {
@@ -23,3 +26,4 @@
       proxy_redirect off;
    }
  }
+}
