--- a/nginx/default.conf
+++ b/nginx/default.conf
@@ -18,6 +18,8 @@ server {
   }
 
   location / {
+    try_files $uri $uri/ /index.html;
+    
     proxy_pass http://client:3000;
     proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
     proxy_set_header Host $host;
