--- a/nginx/default.conf
+++ b/nginx/default.conf
@@ -9,7 +9,7 @@ server {
   #       return 301 https://$host$request_uri;
   #       }
 
-  location /api {
+  location /api/ {
     proxy_pass http://backend:8080;
     proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
     proxy_set_header Host $host;
