--- a/nginx/default.conf
+++ b/nginx/default.conf
@@ -19,7 +19,7 @@ server {
 
   location / {
     # try_files $uri $uri/ /index.html;
-    try_files $uri $uri/ =404;
+    # try_files $uri $uri/ =404;
 
     proxy_pass http://client:3000;
     proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
