--- a/nginx/default.conf
+++ b/nginx/default.conf
@@ -2,14 +2,7 @@ server {
   listen 80;
   server_name campper.site;
 
-  # error_log /var/log/nginx/default/error.log;
-
-# https 설정 시 사용
-  # if ($http_x_forwarded_proto != 'https') {
-  #       return 301 https://$host$request_uri;
-  #       }
-
-  location /api/ {
+  location /api {
     proxy_pass http://backend:8080;
     proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
     proxy_set_header Host $host;
@@ -21,10 +14,10 @@ server {
     # try_files $uri $uri/ /index.html;
     # try_files $uri $uri/ =404;
 
-    # proxy_pass http://client:3000;
-    # proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
-    # proxy_set_header Host $host;
-    # proxy_set_header X-Real_IP $remote_addr;
-    # proxy_redirect off;
+    proxy_pass http://client:3000;
+    proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+    proxy_set_header Host $host;
+    proxy_set_header X-Real_IP $remote_addr;
+    proxy_redirect off;
   }
 }
