--- a/nginx/default.conf
+++ b/nginx/default.conf
@@ -14,6 +14,11 @@ server {
     # try_files $uri $uri/ /index.html;
     # try_files $uri $uri/ =404;
 
+    root  /usr/share/nginx/html;
+
+    index  index.html;
+    try_files $uri $uri/ /index.html;
+
     proxy_pass http://client:3000;
     proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
     proxy_set_header Host $host;
