--- a/nginx/default.conf
+++ b/nginx/default.conf
@@ -14,10 +14,10 @@ server {
     # try_files $uri $uri/ /index.html;
     # try_files $uri $uri/ =404;
 
-    root  /usr/share/nginx/html;
+    # root  /usr/share/nginx/html;
 
-    index  index.html;
-    try_files $uri $uri/ /index.html;
+    # index  index.html;
+    # try_files $uri $uri/ /index.html;
 
     proxy_pass http://client:3000;
     proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
@@ -25,8 +25,8 @@ server {
     proxy_set_header X-Real_IP $remote_addr;
     proxy_redirect off;
 
-    proxy_buffer_size          128k;
-    proxy_buffers              4 256k;
-    proxy_busy_buffers_size    256k;
+    # proxy_buffer_size          128k;
+    # proxy_buffers              4 256k;
+    # proxy_busy_buffers_size    256k;
   }
 }
