--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -13,8 +13,8 @@ services:
     hostname: backend
     env_file:
       - .env
-    expose:
-      - "8080"
+    ports:
+      - "8080:8080"
 
   client:
     image: squirmm/campper-client:main
