--- a/nginx/default.conf
+++ b/nginx/default.conf
@@ -25,8 +25,8 @@ server {
     proxy_set_header X-Real_IP $remote_addr;
     proxy_redirect off;
 
-    # proxy_buffer_size          128k;
-    # proxy_buffers              4 256k;
-    # proxy_busy_buffers_size    256k;
+    proxy_buffer_size          128k;
+    proxy_buffers              4 256k;
+    proxy_busy_buffers_size    256k;
   }
 }
