:lady_beetle: bug(docker_image) 도커 캐쉬 제거명령어 추가

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -49,6 +49,6 @@ jobs:
           script: |
             sh ~/srv/ubuntu/deploy.sh
             echo "start docker-compose up: ubuntu"
-            sudo docker image prune
             sudo docker-compose -f ~/srv/ubuntu/docker-compose.yml pull
             sudo docker-compose -f ~/srv/ubuntu/docker-compose.yml --env-file ~/srv/ubuntu/.env up --build -d
+            sudo docker system prune --all -f
