:rocket: docker-compose redis_password 설정 테스트

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -3,6 +3,8 @@ services:
   # redis 설정
   redis:
     image: "redis:alpine"
+    environment:
+      - REDIS_PASSWORD: ${REDIS_PASSWORD}
     ports:
       - "6379:6379"
 
