--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -16,12 +16,10 @@ jobs:
       - name: checkout
         uses: actions/checkout@master
 
-      - name: create env files
+      - name: create env file
         run: |
           touch .env
           echo "${{ secrets.ENV_VARS }}" >> .env
-          touch .env.local
-          echo "${{ secrets.ENV_LOCAL_VARS }}" >> .env.local
 
       - name: create remote directory
         uses: appleboy/ssh-action@master
